# dcv-access-console

./: .gitignore  README.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: dry-run.yml  trigger-integ-tests.yaml
dcv-access-console-auth-server/: .gitignore  CHANGES.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
dcv-access-console-configuration-wizard/: .gitignore  CHANGES.md  DEVELOPING.md  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt  tox.ini
dcv-access-console-configuration-wizard/licenses/: third-party-licenses.txt
dcv-access-console-configuration-wizard/src/: __init__.py  onebox_wizard_input.json  wizard.py  wizard_input.json
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/: __init__.py  cli.py
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/assets/default_configs/: access-console-auth-server-secrets.properties  access-console-auth-server.properties  access-console-handler-secrets.properties  access-console-handler.properties  access-console-web-client-secrets.properties  access-console-web-client.properties
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/assets/scripts/: generate_certificates.sh
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/conf/: configuration_generator.py
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/constants/: constants.py
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/constants/prompts/: prompts_en.py
dcv-access-console-configuration-wizard/src/dcv_access_console_config_wizard/utils/: broker_utils.py  cert_utils.py  component_utils.py  db_utils.py  file_utils.py  logger.py
dcv-access-console-configuration-wizard/test/conf/: test_configuration.py
dcv-access-console-handler/: .gitignore  CHANGES.md  README.md  build.gradle.kts  config.gradle.kts  settings.gradle.kts
dcv-access-console-integration-tests/: README.md  build.gradle.kts  settings.gradle.kts
dcv-access-console-model/: README.md  build.gradle.kts  settings.gradle.kts
dcv-access-console-model/model/: dcv-access-console-handler-api.yaml  dcv-session-manager-api.yaml
dcv-access-console-web-client/: .gitignore  CHANGES.md  README.md  package-lock.json
dcv-access-console-web-client/server/: .env  .env.development  access-console-web-client-advanced.properties  (+10 more)
(+604 files in other folders)
